|#1016|Fixed the ie10 issue for the right aligned text box- requested quantity on non-supply modal

--- a/modules/openlmis-web/src/main/webapp/public/less/content.less
+++ b/modules/openlmis-web/src/main/webapp/public/less/content.less
@@ -2047,6 +2047,12 @@ input[placeholder].placeholder {
   background: url('../images/radio-big-checked.png') no-repeat !important;
 }
 
+#rightsTable{
+  th{
+    vertical-align:top;
+  }
+}
+
 .rights-table {
   tr {
     th, td {
@@ -2094,6 +2100,10 @@ input[placeholder].placeholder {
     }
   }
 }
+
+
+#quantityRequested{
+    padding-right:0px!important;}
 
 .configure-program-table {
   width: 50%;
